lets go favicons

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <title>Skelichelli</title>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://js.stripe.com/v3/"></script>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
     <style>
         body {
             background: #161618 url('https://www.transparenttextures.com/patterns/asfalt-light.png');
